Some simple read/write

--- a/fuse/Makefile
+++ b/fuse/Makefile
@@ -4,4 +4,8 @@ all: client
 # 	g++ server.hpp -o server `pkg-config fuse --cflags --libs`
 
 client: client.cpp server.hpp
-	g++ client.cpp -o client `pkg-config fuse --cflags --libs`
+	g++ client.cpp -std=c++17 -g -o client `pkg-config fuse --cflags --libs` -lcrypto
+
+
+clean:
+	rm -f client 
